6.1
New Features:
* 2977832: meter plugin 
* 2977833: battery plugin (gui part only)
* 2981332: volume plugin
Fixed Bugs:
* fixed locale/NLS issues with configure
* chart class struct was made static
* 2979388: configure broken - problems in busybox environments
* fixing variable name check in configure

6.0
* adding xlogout script
* fixing cpu and net plugins to recover after /proc read errors
* menu: new code to build system menu
* GUI configurator code was reworked
* common API to run external programs was added
* new configuration system - xconf - was introduced
* adding png icons for reboot and shutdown. They may be missing in
  some icon themes.
* all svg icons were removed
* automatic profile created
* show calendar as default action in dclock
* fixed 'toggle iconfig all' algorithm
* 2863566: Allow seconds in dclock plugin
* 2972256: rebuild code upon makefile changes
* 2965428: fbpanel dissapears when configuring via GUI
* 2958238: 5.6 has bugs in configure script and fails to load plugins
* 2953357: Crashes when staring Opera

5.8
* moving config dir ~/.config
* automatic new profile creation
* removing app categories default icons
* dclock plugin pops up calendar if no action was set
* net plugin got detailed tooltip and color configs
* cpu plugin got detailed tooltip and color configs
* mem plugin was made
* allocating plugin's private section as part of instance malloc
* drag and drop fix in launchbar
* Fixed "2891558: widthtype=request does not work"


5.7
* XRandR support (dynamic desktop geometry changes)
* Fixed "2891558: widthtype=request does not work"
* configurator redraws panel on global changes
* fixing 'toggle iconify all' algorithm


5.6
* genmon plugin - displays command output in a panel
* CFLAGS propagation fix

5.5
* adding static build option for debugin purposes e.g to use with valgrind
* ability to set CFLAGS from command line was added. 
  make CFLAGS=bla-bla works correctly
* fixing memory leaks in taskbar, menu and icons plugin
